@@ -2674,7 +2674,7 @@ bool KWDocument::saveOasisHelper( KoStore* store, KoXmlWriter* manifestWriter, S
     KoSavingContext savingContext( mainStyles, KoSavingContext::Store );
 
     // Save user styles as KoGenStyle objects
-    KoSavingContext::StyleNameMap map = m_styleColl->saveOasis( mainStyles, KoGenStyle::STYLE_USER );
+    KoSavingContext::StyleNameMap map = m_styleColl->saveOasis( mainStyles, KoGenStyle::STYLE_USER, savingContext );
     savingContext.setStyleNameMap( map );
 
     if ( saveFlag == SaveAll )
@@ -2751,7 +2751,7 @@ bool KWDocument::saveOasisHelper( KoStore* store, KoXmlWriter* manifestWriter, S
     bodyWriter->endElement(); // office:text
     bodyWriter->endElement(); // office:body
 
-    KWOasisSaver::writeAutomaticStyles( *contentWriter, mainStyles );
+    KWOasisSaver::writeAutomaticStyles( *contentWriter, mainStyles, savingContext );
 
     oasisStore.closeContentWriter();
 
